--- a/package.json
+++ b/package.json
@@ -3,17 +3,23 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "npm run elm:compile && astro dev",
-    "build": "npm run elm:compile && astro build",
+    "dev": "astro dev",
+    "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "elm:compile": "elm make src/ProductCard/Main.elm --output=public/elm/ProductCard.js"
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/node": "^9.2.1",
+    "@astrojs/react": "^4.2.7",
     "astro": "^5.7.13",
     "axios": "^1.9.0",
-    "elm": "^0.19.1-6",
-    "elm-format": "^0.8.7"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
+  "devDependencies": {
+    "@astrojs/tailwind": "^6.0.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
